# TaskManagerIO

./: README.md  library.json  library.properties  platformio-test.ini  platformio.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  platformio.yml
cmake/: CMakeLists.txt
examples/eventHandling/: eventHandling.ino
examples/halloween/: halloween.ino
examples/longSchedule/: longSchedule.ino
examples/marshalInterrupt/: marshalInterrupt.ino
examples/mbed5NonRtos/: mbedExample.cpp
examples/mbedExample/: mbedExample.cpp
examples/mbedRtos/: mbedExample.cpp
examples/reentrantLocking/: reentrantLocking.ino
examples/simpleTasks/: simpleTasks.ino
examples/taskManagement/: taskManagement.ino
examples/tasksUsingExecutable/: tasksUsingExecutable.ino
src/: BasicInterruptAbstraction.h  ExecWithParameter.h  MockTaskManager.h  ReentrantYieldingLock.cpp  ReentrantYieldingLock.h  SimpleSpinLock.cpp  SimpleSpinLock.h  TaskBlock.h  TaskManager.cpp  TaskManager.h  TaskManagerIO.cpp  TaskManagerIO.h  TaskPlatformDeps.h  TaskTypes.cpp  TaskTypes.h  TmLongSchedule.cpp  TmLongSchedule.h
test/avrClockRollTests/: avrClockRollTests.cpp
test/test_core/: taskManagerCoreTests.cpp
test/test_event/: eventTestCases.cpp
test/test_high_throughput/: HighThroughputTestCases.cpp
test/test_interrupt/: InterruptTestCases.cpp
test/test_reentrant_locking/: reentrantLockingTests.cpp
test/timerInterruptTest/: timerInterruptTest.cpp
test/utils/: test_utils.h
tests/taskMgrTests/: HighThroughputTestCases.cpp  InterruptTestCases.cpp  (+7 more)
(+1 files in other folders)
